# mlb-qbench

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_FINDINGS_20250804_133613.md  CONTRIBUTING.md  IMPROVE.md  Makefile  POSTGRESQL_PGVECTOR_MIGRATION.md  README.md  WARP.md  analyze_testrail_mapping.py  check_db_status.py  debug_import.py  diagnose_python.py  docker-compose.yml  install-server.sh  mcp.json  mcp_alt.json  mcp_venv_wrapper.py  mcp_wrapper.py  mcp_wrapper_diagnostic.py  pyproject.toml  run-mcp-server.sh  run_mcp_server.py  test_mcp_direct.py  test_venv_module.py
data/: test_counters.db
docs/: API_DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INGESTION_GUIDE.md  MCP_TOOLS_REFERENCE.md  MCP_USAGE.md  POSTGRESQL_MAINTENANCE.md  TOOLSET.md  normalized_test.schema.json
docs/codereview_archive/: CODE_REVIEW_FINDINGS_20250803_172008.md  CODE_REVIEW_FINDINGS_20250804.md
docs/findings/: CODEREVIEW_FINDINGS.md  FINDINGS.md  STEPS_FINDINGS.md
docs/migration/: MIGRATION_RESOLUTION_REPORT.md  MIGRATION_STATUS.md
scripts/: check_jira_key_length.py  clear_db.py  migrate_from_sqlite.py  migrate_optimized.py  restart_migration.sh  run_full_migration.sh  setup_postgres.sh  switch_to_small_embeddings.sh  test_postgres_setup.py  test_search.py
sql/: create_schema.sql  create_schema_optimized.sql
src/: README.md  container.py  counter_service.py  embedder.py
src/auth/: __init__.py  auth.py  models.py  secure_key_manager.py
src/db/: __init__.py  postgres_vector.py  postgres_vector_optimized.py
src/ingest/: ingest_api.py  ingest_functional.py  normalize.py
src/mcp/: __init__.py  __main__.py  server.py  server_postgres.py
src/models/: filter_models.py  schema.py  test_models.py
src/security/: __init__.py  jira_validator.py  path_validator.py
src/service/: main.py  main_postgres.py
step_consolidation/: FINAL_REPORT.md  README.md
tests/: conftest.py  test_auth.py  test_core_models.py  test_filter_security.py  test_health_endpoint.py  test_helpers.py  test_ingestion_security.py  test_jira_endpoint_security.py  test_jira_validation.py  test_normalize.py  test_path_security.py  test_service_foundation.py
(+20 files in other folders)
